# sequent

./: README.md  sequent.cabal
app/: Main.hs
src/: Sequent.hs
src/Sequent/: Check.hs  Env.hs  Inference.hs  Introduce.hs  Proof.hs  ProofTerm.hs  Sugar.hs  Term.hs  Theorem.hs
test/: Tests.hs
test/Sequent/: Peano.hs  Sets.hs  Tests.hs
