name:                sequent
version:             0.1.0.0
description:         Sequent Calculus Proof Checker
homepage:            http://github.com/matthieubulte/sequent#readme
license:             BSD3
license-file:        LICENSE
author:              Matthieu Bulté
maintainer:          matthieu.bulte.mb@gmail.com
copyright:           2016 Author Here
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sequent
  other-modules:       Sequent.Check
                     , Sequent.Env
                     , Sequent.Inference
                     , Sequent.Introduce
                     , Sequent.Proof
                     , Sequent.Theorem
                     , Sequent.Term

  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable sequent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sequent
  default-language:    Haskell2010

test-suite sequent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sequent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthieubulte/sequent
